# codex-start

./: .dockerignore  .gitignore  Cargo.toml  LICENSE-NOTICE  PLAN.md  README.md  deny.toml  install.ps1  install.sh  release.toml  rust-toolchain.toml
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  images.yml  release.yml  security.yml
assets/: images.lock.toml
assets/environments/: generic.toml  rust.toml  uv.toml  web.toml
crates/codex-start-core/: Cargo.toml
crates/codex-start-core/src/: config.rs  container_path.rs  environment.rs  lib.rs  plan.rs  project.rs
crates/codex-start-host/: Cargo.toml  build.rs
crates/codex-start-host/src/: app.rs  assets.rs  cli.rs  command.rs  config_tui.rs  configuration.rs  content_hash.rs  editor.rs  environments.rs  error.rs  forwarding.rs  git.rs  home.rs  host_services.rs  init_spec.rs  launch_plan.rs  locking.rs  main.rs  manager_tui.rs  networking.rs  paths.rs  runtime.rs  secrets.rs  session.rs  update.rs
crates/codex-start-proxy/: Cargo.toml
crates/codex-start-proxy/src/: allowlist.rs  auth.rs  browser.rs  connect.rs  container_init.rs  container_init_windows.rs  egress.rs  host_ssh.rs  lib.rs  relay.rs
crates/codex-start-proxy/tests/: container_init_ordering.rs
docs/: configuration.md  environments.md  installation.md  releasing.md  security.md
docs/examples/: config.toml  environment.toml  project.toml
images/environment/: Dockerfile  codex-package-lock.json  codex-package.json  login-path.sh
images/sidecar/: Dockerfile
packaging/: nfpm.yaml
tests/installers/: test-install-ps1.ps1  test-install-sh.sh
xtask/: Cargo.toml
xtask/src/: main.rs
