[workspace]
members = [
    "crates/codex-start-core",
    "crates/codex-start-host",
    "crates/codex-start-proxy",
    "xtask",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "GPL-3.0-or-later"
repository = "https://github.com/cofob/codex-start"
authors = ["Codex Start contributors"]

[workspace.dependencies]
# Exact pins in this table keep transitive versions aligned for cargo-deny.
assert_cmd = "2.0"
base64 = "0.22"
blake3 = "1.8"
bytes = "1.10"
clap = { version = "=4.5.50", features = ["derive", "env", "wrap_help"] }
directories = "6.0"
dialoguer = { version = "=0.11.0", default-features = false }
fs2 = "0.4"
flate2 = "1.1"
futures = "0.3"
idna = "1.0"
ipnet = "2.11"
libc = "0.2"
predicates = "3.1"
proptest = "=1.6.0"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ratatui = { version = "=0.28.1", default-features = false, features = ["crossterm"] }
secrecy = { version = "0.10", features = ["serde"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
tempfile = "=3.15.0"
tar = { version = "0.4", default-features = false }
thiserror = "=1.0.69"
tokio = { version = "1.45", features = ["fs", "io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.8"
toml_edit = { version = "0.22", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
url = { version = "2.5", features = ["serde"] }
uuid = { version = "=1.12.1", features = ["serde", "v4"] }
walkdir = "2.5"
zip = { version = "8.6", default-features = false, features = ["deflate-flate2"] }
zeroize = { version = "1.8", features = ["derive"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
struct_excessive_bools = "allow"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"
