[package]
name = "xtask"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
flate2.workspace = true
serde.workspace = true
serde_json.workspace = true
semver.workspace = true
sha2.workspace = true
tar.workspace = true
tempfile.workspace = true
thiserror.workspace = true
toml.workspace = true
zip.workspace = true

[dev-dependencies]
codex-start-core = { version = "0.1.0", path = "../crates/codex-start-core" }

[lints]
workspace = true
