[package]
name = "codex-start-core"
description = "Domain model and configuration engine for codex-start"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64.workspace = true
blake3.workspace = true
directories.workspace = true
idna.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true

[lints]
workspace = true
